# nonstandard

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements_development.txt
source/nonstandard/: __init__.py  collections.py  identifiers.py
tests/nonstandard_tests/collections/: test_unwrap.py
tests/nonstandard_tests/identifiers/: test_dense_timestamp.py  test_identifierise.py  test_is_safe_identifier.py  test_md5_bytes.py  test_md5_hex.py  test_md5_int.py  test_random_integer_string.py  test_readable_timestamp.py  test_safe_timestamp.py
